oauth2-gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-gateway
  labels:
    app: oauth2-gateway
spec:
  selector:
    matchLabels:
      app: oauth2-gateway
  replicas: 1
  template:
    metadata:
      name: oauth2-gateway
      labels:
        app: oauth2-gateway
    spec:
      containers:
      - name: oauth2-gateway
        image: springcloudservices/oauth2-gateway-k8s
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        volumeMounts:
        - name: application-config-volume
          mountPath: /config/rescue/
      volumes:
      - name: "application-config-volume"
        configMap:
          name: "application-configmap"
